feat: initial rough version of the plugin (many things still need to be done)